<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountriesQuiz">

    <ImageView
        android:id="@+id/flagImage"
        android:layout_width="484dp"
        android:layout_height="318dp"
        android:contentDescription="@string/flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@mipmap/vietnam_flag_foreground" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="275dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795">

        <Button
            android:id="@+id/optionA"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/pink"
            android:text="@string/vietnam" />

        <Button
            android:id="@+id/optionB"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/teal"
            android:text="@string/south_korea" />

        <Button
            android:id="@+id/optionC"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/senegal" />

        <Button
            android:id="@+id/optionD"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/argentina" />
    </LinearLayout>

    <ImageView
        android:id="@+id/goBack"
        android:contentDescription="@string/back"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/goNext"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:scaleX="-1"
        android:clickable="true"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/countryQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:textSize="20sp"
        android:text="@string/country_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/total_questions"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flagImage" />

    <ImageView
        android:id="@+id/goHome"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:onClick="goHome"
        android:contentDescription="@string/go_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>