<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/whichSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:padding="20dp"
        android:text="@string/which_set"
        android:textSize="25sp"
        android:textFontWeight="300"
        android:textAlignment="center"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:onClick="goCountriesQuiz"
            android:text="@string/countries"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/yellow"
            android:onClick="goCitiesQuiz"
            android:text="@string/cities"
            android:textSize="20sp" />

        <Button
            android:id="@+id/foodBev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/teal"
            android:onClick="goFoodQuiz"
            android:text="@string/food_beverage"
            android:textSize="20sp" />

        <Button
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/orange"
            android:onClick="goGeneralQuiz"
            android:text="@string/general"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="35dp">

        <Button
            android:id="@+id/mySetsButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="17sp"
            android:backgroundTint="@color/blue"
            android:text="@string/my_sets" />

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/squish" />

        <Button
            android:id="@+id/addSetsButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/blue"
            android:textSize="17sp"
            android:text="@string/addSets" />


    </LinearLayout>

</LinearLayout>