<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/account_icon"/>

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:layout_marginTop="18dp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:layout_marginTop="18dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/login"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@color/white"
                android:padding="18dp"
                android:text="@string/register"
                android:textColor="@color/pink"
                android:textSize="20sp"
                android:layout_margin="8dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>