<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/totalQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/total_questions"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/goHome"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/go_home"
            android:onClick="goHome"
            app:srcCompat="@drawable/home_icon" />

    </RelativeLayout>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="1dp"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/optionButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/pink"
            />

        <Button
            android:id="@+id/optionButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/teal"
             />

        <Button
            android:id="@+id/optionButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue"
            />

        <Button
            android:id="@+id/optionButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="57dp"
            android:layout_height="41dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/arrow" />

        <ImageView
            android:id="@+id/goNext"
            android:layout_width="57dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/next"
            android:scaleX="-1"
            app:srcCompat="@drawable/arrow" />

    </RelativeLayout>

</LinearLayout>